Importing web template

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,8 @@ $white: #ffffff;
 $black: #000000;
 $primary1: #8b0000;
 $primary2: #8b0000;
+// $primary1: #000000;
+// $primary2: #000000;
 $textCol: #1f1f1f;
 
 // import fonts
