--- a/css/bootstrap__.css
+++ b/css/bootstrap__.css
@@ -7,7 +7,7 @@
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
-  --purple: #660000;
+  --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
   --orange: #fd7e14;
@@ -16,10 +16,10 @@
   --teal: #20c997;
   --cyan: #17a2b8;
   --white: #fff;
-  --gray: #660000;
+  --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #007bff;
-  --secondary: #660000;
+  --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -212,7 +212,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #660000;
+  color: #6c757d;
   text-align: left;
   caption-side: bottom;
 }
@@ -469,7 +469,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #660000;
+  color: #6c757d;
 }
 
 .blockquote-footer::before {
@@ -501,7 +501,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #660000;
+  color: #6c757d;
 }
 
 code {
@@ -1890,27 +1890,27 @@ pre code {
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #660000;
+  color: #6c757d;
   opacity: 1;
 }
 
 .form-control::-moz-placeholder {
-  color: #660000;
+  color: #6c757d;
   opacity: 1;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #660000;
+  color: #6c757d;
   opacity: 1;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #660000;
+  color: #6c757d;
   opacity: 1;
 }
 
 .form-control::placeholder {
-  color: #660000;
+  color: #6c757d;
   opacity: 1;
 }
 
@@ -2031,7 +2031,7 @@ textarea.form-control {
 }
 
 .form-check-input:disabled ~ .form-check-label {
-  color: #660000;
+  color: #6c757d;
 }
 
 .form-check-label {
@@ -2455,8 +2455,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #660000;
-  border-color: #660000;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-secondary:hover {
@@ -2471,8 +2471,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #660000;
-  border-color: #660000;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
@@ -2724,14 +2724,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #660000;
-  border-color: #660000;
+  color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #660000;
-  border-color: #660000;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
@@ -2739,15 +2739,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #660000;
+  color: #6c757d;
   background-color: transparent;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #660000;
-  border-color: #660000;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
@@ -2964,7 +2964,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:disabled, .btn-link.disabled {
-  color: #660000;
+  color: #6c757d;
   pointer-events: none;
 }
 
@@ -3252,7 +3252,7 @@ input[type="button"].btn-block {
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #660000;
+  color: #6c757d;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3266,7 +3266,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #660000;
+  color: #6c757d;
   white-space: nowrap;
 }
 
@@ -3638,7 +3638,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
-  color: #660000;
+  color: #6c757d;
 }
 
 .custom-control-input:disabled ~ .custom-control-label::before {
@@ -3788,7 +3788,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:disabled {
-  color: #660000;
+  color: #6c757d;
   background-color: #e9ecef;
 }
 
@@ -4070,7 +4070,7 @@ input[type="button"].btn-block {
 }
 
 .nav-link.disabled {
-  color: #660000;
+  color: #6c757d;
   pointer-events: none;
   cursor: default;
 }
@@ -4094,7 +4094,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs .nav-link.disabled {
-  color: #660000;
+  color: #6c757d;
   background-color: transparent;
   border-color: transparent;
 }
@@ -4818,7 +4818,7 @@ input[type="button"].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #660000;
+  color: #6c757d;
   content: "/";
 }
 
@@ -4831,7 +4831,7 @@ input[type="button"].btn-block {
 }
 
 .breadcrumb-item.active {
-  color: #660000;
+  color: #6c757d;
 }
 
 .pagination {
@@ -4886,7 +4886,7 @@ input[type="button"].btn-block {
 }
 
 .page-item.disabled .page-link {
-  color: #660000;
+  color: #6c757d;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4980,7 +4980,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #660000;
+  background-color: #6c757d;
 }
 
 a.badge-secondary:hover, a.badge-secondary:focus {
@@ -5367,7 +5367,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #660000;
+  color: #6c757d;
   pointer-events: none;
   background-color: #fff;
 }
@@ -5706,7 +5706,7 @@ a.close.disabled {
   -ms-flex-align: center;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #660000;
+  color: #6c757d;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6518,7 +6518,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #660000 !important;
+  background-color: #6c757d !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6640,7 +6640,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #660000 !important;
+  border-color: #6c757d !important;
 }
 
 .border-success {
@@ -9857,7 +9857,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #660000 !important;
+  color: #6c757d !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9917,7 +9917,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #660000 !important;
+  color: #6c757d !important;
 }
 
 .text-black-50 {
